--- a/app/views/locations/_form.html.erb
+++ b/app/views/locations/_form.html.erb
@@ -15,6 +15,10 @@
     <%= f.label :Dirección %><br>
     <%= f.text_field :address %>
   </div>
+  <div class="field">
+    <%= f.label :Quien_vive_ahi? %><br>
+    <%= f.text_field :description %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
